# src/main/java/com/hsbremen/mkss/lab/common/model/Species.java
@@ -1,5 +1,5 @@
 package com.hsbremen.mkss.lab.common.model;
 
 public enum Species {
-        MAMMALS, BIRDS, REPTILES, AMPHIBIANS, FISH, INSECTS, INVERTEBRATES
+        MAMMALS, BIRDS, REPTILES, AMPHIBIANS
 }
