# src/main/resources/openapi/zooRest.yaml
@@ -56,7 +56,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Animal'
-  /animals/{species}:
+  /animals/species/{species}:
     get:
       operationId: getAnimalsBySpecies
       summary: Get all animals of a specific type
@@ -66,7 +66,7 @@ paths:
           required: true
           description: Species of the animal
           schema:
-            $ref: '#/components/schemas/Species'
+            type: string
       responses:
         '200':
           description: A list of animals
@@ -125,9 +125,6 @@ components:
         - birds
         - reptiles
         - amphibians
-        - fish
-        - insects
-        - invertebrates
     Compound:
       type: object
       properties:
